# devopsmlops

./: CODE_LICENSE  CONTRIBUTING.md  Makefile  README.md  metadata.yml  mkdocs.yml  pyproject.toml
chapters/: 00-index.md  01-intro00.md  02-intro01.md  03-chapter1.md  04-chapter2.md  05-chapter3.md  06-chapter4.md  07-chapter5.md  08-chapter6.md  09-chapter7.md  10-chapter8.md  11-chapter9.md  12-chapter10.md  13-chapter11.md  14-chapter12.md  15-chapter13.md  16-chapter14.md
